# Summer_Pract_Task2.2

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.c
cmake/: MyFunctions.cmake
lib/: CMakeLists.txt
lib/include/: args_parser.h  hexdump.h
lib/src/: args_parser.c  getopt.c  hexdump.c
tests/: CMakeLists.txt  tests.c
